# my-project

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: README.md
frontend/: index.html
frontend/assets/: app.js  styles.css
scripts/: chat.py  create_chroma_index.py  ingest_documents.py  serve.py
src/portfolio_chatbot/: __init__.py  chatbot.py  chroma_index.py  chunking.py  config.py  document_loaders.py  embeddings.py  ingestion.py  retrieval.py  web_app.py
