[project]
name = "portfolio-chatbot"
version = "0.1.0"
description = "Personal portfolio chatbot with a ChromaDB-backed retrieval index."
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.5.0",
    "fastapi>=0.115.0",
    "langchain-text-splitters>=0.3.0",
    "openai>=1.0.0",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
